# cargo-eda-template

./: Cargo.toml  LICENSE-MIT  Makefile.toml  README.md  rust-toolchain  rustfmt.toml
benches/: benchmark.rs  criterion.rs
src/: lib.rs
tests/: test1.rs
