[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

# [lib]
# crate-type = ["cdylib", "rlib"]

# [features]
# default = ["console_error_panic_hook"]

[dependencies]


[dev-dependencies]
criterion = "0.3"
proptest = "1.4.0"

# [profile.release]
# # Tell `rustc` to optimize for small code size.
# opt-level = "s"
