[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

# [lib]
# crate-type = ["cdylib", "rlib"]

# [features]
# default = ["console_error_panic_hook"]

[dependencies]
log4rs = "1.3"
log = "1.0"
thiserror = "1.0"
clap = {version = "4.0",features = ["derive"]}
termcolor = "1.4.1"
serde = { version = "1.0.118", optional = true, features = ["derive"] }


[dev-dependencies]
criterion = "0.3"
proptest = "1.4.0"

[lib]
name = "{{project-name}}"
path = "src/lib.rs"

[features]
default = []
dev = ["serde"]

# [profile.release]
# # Tell `rustc` to optimize for small code size.
# opt-level = "s"
